# mcp_bcrp

./: .gitignore  CONTRIBUTING.md  README.md  RELEASE.md  pyproject.toml  run.py
.github/workflows/: ci.yml  publish.yml
analysis/: README.md  process_data.py  reproducibility.md
analysis/informality_trap/: README.md  reproducibility.md
analysis/peruvian_paradox/: README.md  reproducibility.md
examples/: Guia_Usuario_BCRP.ipynb  basic_usage.py
mcp_bcrp/: __init__.py  __main__.py  _version.py  client.py  search_engine.py  server.py
tests/: test_basic.py
