[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-bcrp"
dynamic = ["version"]
description = "MCP Server for Banco Central de Reserva del Perú (BCRP) Statistical API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Maykol Medrano", email = "mmedrano2@uc.cl"}
]
keywords = [
    "mcp",
    "bcrp",
    "peru",
    "macroeconomics",
    "central-bank",
    "api",
    "economics",
    "statistics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "fastmcp>=0.1.0",
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
    "httpx>=0.23.0",
    "rapidfuzz>=3.0.0"
]

[project.urls]
Homepage = "https://github.com/MaykolMedrano/mcp_bcrp"
Repository = "https://github.com/MaykolMedrano/mcp_bcrp"
Issues = "https://github.com/MaykolMedrano/mcp_bcrp/issues"

[project.scripts]
mcp-bcrp = "mcp_bcrp.server:mcp.run"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_bcrp*"]

[tool.setuptools_scm]
write_to = "mcp_bcrp/_version.py"
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
